--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List CI/CD deployment</title>
+    <title>Todo List </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>Todo List <img src="images/icon.png" alt="checked list icon"></h2>
+            <h2>Todo List CI/CD deployment <img src="images/icon.png" alt="checked list icon"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Enter your task">
                 <button onclick="addTask()">Add</button>
